--- a/notebooks/Storm_Database.ipynb
+++ b/notebooks/Storm_Database.ipynb
@@ -23,11 +23,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "pip install pandas==1.3.2\n",
-    "pip install tqdm==4.62.2\n",
-    "pip install psycopg2-binary==2.9.1\n",
-    "pip install sqlalchemy==1.4.23"
+    "#%%bash\n",
+    "!pip install pandas==1.3.2\n",
+    "!pip install tqdm==4.62.2\n",
+    "!pip install psycopg2-binary==2.9.1\n",
+    "!pip install sqlalchemy==1.4.23"
    ]
   },
   {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1c12ea77",
    "metadata": {},
    "outputs": [],
@@ -65,21 +65,10 @@
    "id": "e520f7f4",
    "metadata": {},
    "source": [
-    "## Constant URLs, storm categories, and strings\n",
+    "## Constants\n",
     "\n",
-    "- Zone-county correlation file\n",
-    "\n",
-    "Ref: weather.gov/gis/ZoneCounty\n",
-    "\n",
-    "Derived from U.S. Counties and NWS Public Forecast Zones\n",
-    "\n",
-    "- NOAA storm database\n",
-    "\n",
-    "Ref: https://www.ncdc.noaa.gov/stormevents/\n",
-    "\n",
-    "The occurrence of storms and other significant weather phenomena having sufficient intensity to cause loss of life, injuries, significant property damage, and/or disruption to commerce.\n",
-    "\n",
-    "- GeoJSON file for US Counties"
+    "- North American Industry Classification System Code\n",
+    "- Regex pattern to remove square brackets from the response from census api"
    ]
   },
   {
@@ -157,6 +146,21 @@
     "\n",
     "def get_zone_county_corr_df():\n",
     "    return download_zone_county_corr_file(ZONE_COUNTY_CORR_URL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a886ff9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(ZONE_COUNTY_CORR_URL, sep='|', header=None,\n",
+    "            names=['STATE', 'ZONE', 'CWA', 'NAME', 'STATE_ZONE',\n",
+    "                   'CZ_NAME', 'FIPS', 'TIME_ZONE', 'FE_AREA', 'LAT', 'LON'])\n",
+    "df['STATE_FIPS'] = df['FIPS']//1000\n",
+    "df = df[['STATE_FIPS', 'ZONE', 'FIPS']]\n",
+    "df.to_csv('zone_county_corr.csv')"
    ]
   },
   {
@@ -703,7 +707,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -717,7 +721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
