save a copy of the database

--- a/notebooks/Storm_Database.ipynb
+++ b/notebooks/Storm_Database.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1c12ea77",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
     "from sqlalchemy import create_engine\n",
     "\n",
     "from amazon_cred import ENDPOINT, PORT, USER, PASSWORD, DATABASE\n",
-    "from data_constants import NOAA_CSVFILES_URL, ZONE_COUNTY_CORR_URL,TABLE_COLUMNS_NOAA\n",
+    "from data_constants import NOAA_CSVFILES_URL, ZONE_COUNTY_CORR_CSV,TABLE_COLUMNS_NOAA\n",
     "from data_constants import MIN_DAMAGE, BEGIN_YEAR, END_YEAR, STORM_CATEGORIES"
    ]
   },
@@ -136,31 +136,21 @@
     "            files_dict[result[0]] = fname\n",
     "    return files_dict\n",
     "\n",
-    "def download_zone_county_corr_file(url):\n",
+    "def download_zone_county_corr_file_orig(url):\n",
     "    df = pd.read_csv(ZONE_COUNTY_CORR_URL, sep='|', header=None,\n",
     "                names=['STATE', 'ZONE', 'CWA', 'NAME', 'STATE_ZONE',\n",
     "                       'CZ_NAME', 'FIPS', 'TIME_ZONE', 'FE_AREA', 'LAT', 'LON'])\n",
     "    df['STATE_FIPS'] = df['FIPS']//1000\n",
     "    df = df[['STATE_FIPS', 'ZONE', 'FIPS']]\n",
+    "    df.to_csv('../data/zone_county_corr.csv')\n",
+    "    return df\n",
+    "\n",
+    "def download_zone_county_corr_file(url):\n",
+    "    df = pd.read_csv(url)\n",
     "    return df\n",
     "\n",
     "def get_zone_county_corr_df():\n",
-    "    return download_zone_county_corr_file(ZONE_COUNTY_CORR_URL)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "a886ff9a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(ZONE_COUNTY_CORR_URL, sep='|', header=None,\n",
-    "            names=['STATE', 'ZONE', 'CWA', 'NAME', 'STATE_ZONE',\n",
-    "                   'CZ_NAME', 'FIPS', 'TIME_ZONE', 'FE_AREA', 'LAT', 'LON'])\n",
-    "df['STATE_FIPS'] = df['FIPS']//1000\n",
-    "df = df[['STATE_FIPS', 'ZONE', 'FIPS']]\n",
-    "df.to_csv('zone_county_corr.csv')"
+    "    return download_zone_county_corr_file(ZONE_COUNTY_CORR_CSV)"
    ]
   },
   {
@@ -662,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "c23267b1",
    "metadata": {},
    "outputs": [],
@@ -675,7 +665,7 @@
     "    database = DATABASE\n",
     ")\n",
     "with conn:\n",
-    "    select = \"\"\"SELECT * from counties WHERE \"Year\" = 2004\"\"\"\n",
+    "    select = \"\"\"SELECT * from counties\"\"\"\n",
     "    df_counties = pd.read_sql(select, con=conn)\n",
     "    #delete = \"\"\"DELETE FROM counties WHERE \"Year\" = 2004\"\"\"\n",
     "    #conn.cursor().execute(delete)\n",
@@ -683,23 +673,14 @@
     "\n",
     "# import copy\n",
     "# df_safecopy = pd.DataFrame(columns=df_counties.columns, data=copy.deepcopy(df_counties.values))\n",
-    "# df_counties"
+    "# df_counties\n",
+    "# df_counties.to_csv('../data/df_counties.csv') # Save a backup copy of the database"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ac259b58",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3f46a3b",
+   "execution_count": 19,
+   "id": "d530cdea",
    "metadata": {},
    "outputs": [],
    "source": []
