move all keys to cred.py; update zone_county_corr.csv

--- a/notebooks/Storm_Database.ipynb
+++ b/notebooks/Storm_Database.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1c12ea77",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,8 @@
     "from sqlalchemy import create_engine\n",
     "\n",
     "from amazon_cred import ENDPOINT, PORT, USER, PASSWORD, DATABASE\n",
-    "from data_constants import NOAA_CSVFILES_URL, ZONE_COUNTY_CORR_CSV,TABLE_COLUMNS_NOAA\n",
+    "from cred import CENSUS_API_KEY\n",
+    "from data_constants import NOAA_CSVFILES_URL, ZONE_COUNTY_CORR_URL, ZONE_COUNTY_CORR_CSV, TABLE_COLUMNS_NOAA\n",
     "from data_constants import MIN_DAMAGE, BEGIN_YEAR, END_YEAR, STORM_CATEGORIES"
    ]
   },
@@ -104,7 +105,7 @@
     "}\n",
     "\n",
     "PATTERN = '\\[\\[|\\[|\\],|\\]\\]'\n",
-    "PATTERN = re.compile(PATTERN)\n"
+    "PATTERN = re.compile(PATTERN)"
    ]
   },
   {
@@ -117,13 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dc662104",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_list_csvfiles(url):\n",
-    "    html = pd.read_html(url)\n",
+    "    html = pd.read_html(url) # read_html and then get the list of files from the html table\n",
     "    df = html[0]\n",
     "    df.drop(columns=['Description'], inplace=True)\n",
     "    df.dropna(inplace=True)\n",
@@ -131,18 +132,18 @@
     "\n",
     "    files_dict = {}\n",
     "    for fname in df['Name']:\n",
-    "        result = re.findall('_d(?P<year>\\d{4})', fname)\n",
+    "        result = re.findall('_d(?P<year>\\d{4})', fname) # parse the year from the file name\n",
     "        if len(result) > 0:\n",
-    "            files_dict[result[0]] = fname\n",
+    "            files_dict[result[0]] = fname # dict key is the year, value is the filename\n",
     "    return files_dict\n",
     "\n",
-    "def download_zone_county_corr_file_orig(url):\n",
-    "    df = pd.read_csv(ZONE_COUNTY_CORR_URL, sep='|', header=None,\n",
+    "def download_zone_county_corr_file_orig():\n",
+    "    df = pd.read_csv(ZONE_COUNTY_CORR_URL, sep='|', header=None, # Pipe delimited text\n",
     "                names=['STATE', 'ZONE', 'CWA', 'NAME', 'STATE_ZONE',\n",
     "                       'CZ_NAME', 'FIPS', 'TIME_ZONE', 'FE_AREA', 'LAT', 'LON'])\n",
     "    df['STATE_FIPS'] = df['FIPS']//1000\n",
     "    df = df[['STATE_FIPS', 'ZONE', 'FIPS']]\n",
-    "    df.to_csv('../data/zone_county_corr.csv')\n",
+    "    df.to_csv('../data/zone_county_corr.csv', index=False)\n",
     "    return df\n",
     "\n",
     "def download_zone_county_corr_file(url):\n",
@@ -349,7 +350,7 @@
    "source": [
     "def get_results_from_census_api(url):\n",
     "    r = requests.get(url)\n",
-    "    content = r.content\n",
+    "    content = r.content # content is a Python string, parse the string to format the content into csv\n",
     "    content = re.sub(PATTERN, \"\", content.decode('utf-8'))\n",
     "\n",
     "    if len(r.content):\n",
@@ -360,31 +361,30 @@
     "\n",
     "    return None\n",
     "    \n",
-    "def get_county_pop_census(year, county, state):\n",
-    "    url = f'https://api.census.gov/data/2000/dec/sf1?get=NAME,P001001&for=county:{county}&in=state:{state}&key=***REMOVED***'\n",
+    "def get_county_pop_census(year, county, state): # get population from decennial census in 2000, 2010\n",
+    "    url = f'https://api.census.gov/data/2000/dec/sf1?get=NAME,P001001&for=county:{county}&in=state:{state}&key={CENSUS_API_KEY}'\n",
     "    df = get_results_from_census_api(url)\n",
     "    if df is not None:\n",
-    "        url = f'https://api.census.gov/data/2010/dec/sf1?get=NAME,P001001&for=county:{county}&in=state:{state}&key=***REMOVED***'\n",
+    "        url = f'https://api.census.gov/data/2010/dec/sf1?get=NAME,P001001&for=county:{county}&in=state:{state}&key={CENSUS_API_KEY}'\n",
     "        df_2010 = get_results_from_census_api(url)\n",
     "        if df_2010 is not None:\n",
     "            pop_2000 = df.iloc[0]['P001001']\n",
     "            pop_2010 = df_2010.iloc[0]['P001001']\n",
     "            #print(county, ', ', state, ', ', pop_2000, ' to ', pop_2010)\n",
     "            #print(pop_2000 + (year - 2000)*((pop_2010 - pop_2000)//10))\n",
+    "            # interpolate the population for years between 2001 and 2008 from population from year 2000 and 2010\n",
     "            return pop_2000 + (year - 2000)*((pop_2010 - pop_2000)//10)\n",
     "    return None            \n",
     "        \n",
     "def get_county_pop(df, year):\n",
     "    if (year > 2019):\n",
-    "        year = 2019\n",
+    "        year = 2019 # last year for which we have data available\n",
     "    \n",
     "    def get_pop(row):\n",
-    "        state = row.FIPS[:2]\n",
-    "        county = row.FIPS[2:]\n",
-    "\n",
+    "        state = row.FIPS[:2]  # state FIPS is the first 2 characters of FIPS\n",
+    "        county = row.FIPS[2:] # county FIPS is the remaining characters of the 5 character FIPS\n",
     "        # row['Features'] = ['Population']\n",
-    "\n",
-    "        if year < 2009:\n",
+    "        if year < 2009: # Population estimates program is from 2009 - 2019 only\n",
     "            pop = get_county_pop_census(year, county, state)\n",
     "            if pop is not None:\n",
     "                row['DATA_COL'] = [str(pop)]\n",
@@ -392,9 +392,9 @@
     "                print(f'No census pop record for {row[\"FIPS\"]}')\n",
     "                row['DATA_COL'] = ['NaN']\n",
     "            return row\n",
+    "        \n",
     "        # go to the ACS url to get population estimate\n",
-    "        url = f'https://api.census.gov/data/{year}/acs/acs5?get=NAME,B01001_001E&for=county:{county}&in=state:{state}&key=***REMOVED***'\n",
-    "\n",
+    "        url = f'https://api.census.gov/data/{year}/acs/acs5?get=NAME,B01001_001E&for=county:{county}&in=state:{state}&key={CENSUS_API_KEY}'\n",
     "        df = get_results_from_census_api(url)\n",
     "        if df is not None:\n",
     "            row['DATA_COL'] = [str(df.iloc[0]['B01001_001E'])]\n",
@@ -403,7 +403,7 @@
     "            row['DATA_COL'] = ['NaN']\n",
     "        return row\n",
     "\n",
-    "    df = df.progress_apply(get_pop, axis = 1)\n",
+    "    df = df.progress_apply(get_pop, axis = 1) # use tqdm to monitor progress\n",
     "    return df"
    ]
   },
@@ -430,24 +430,22 @@
    "source": [
     "def get_county_business_patterns(df, year):\n",
     "    if (year > 2019):\n",
-    "        year = 2019\n",
+    "        year = 2019 # last year for which we have data available\n",
     "    def get_cbp(row):\n",
     "        state = row.FIPS[:2]\n",
     "        county = row.FIPS[2:]\n",
-    "        # row['Features'].extend(['County Business Patterns', '# establishments','Annual payroll($1000)',' employees'])\n",
-    "        row['DATA_COL'].extend([' '])\n",
+    "        # row['Features'].extend(['County Business Patterns', '# establishments','Annual payroll($1000)','# employees'])\n",
+    "        row['DATA_COL'].extend([' ']) # empty string to separate the heading: 'County Business Patterns'\n",
     "\n",
     "        if year >= 2015:\n",
-    "            url = f'https://api.census.gov/data/{year}/cbp?get=NAME,ESTAB,PAYANN,EMP&for=county:{county}&in=state:{state}&key=***REMOVED***'\n",
+    "            url = f'https://api.census.gov/data/{year}/cbp?get=NAME,ESTAB,PAYANN,EMP&for=county:{county}&in=state:{state}&key={CENSUS_API_KEY}'\n",
     "        else:\n",
-    "            url = f'https://api.census.gov/data/{year}/cbp?get=ESTAB,PAYANN,EMP&for=county:{county}&in=state:{state}&key=***REMOVED***'\n",
+    "            url = f'https://api.census.gov/data/{year}/cbp?get=ESTAB,PAYANN,EMP&for=county:{county}&in=state:{state}&key={CENSUS_API_KEY}'\n",
     "        r = requests.get(url)\n",
     "        if len(r.content):\n",
     "            content = r.content\n",
     "            content = re.sub(PATTERN, \"\", content.decode('utf-8'))\n",
-    "            \n",
-    "            df = pd.read_csv(io.StringIO(content), quotechar='\"')\n",
-    "            \n",
+    "            df = pd.read_csv(io.StringIO(content), quotechar='\"')            \n",
     "            row['DATA_COL'].extend([str(df.iloc[0]['ESTAB']), str(df.iloc[0]['PAYANN']), str(df.iloc[0]['EMP'])])\n",
     "        else:\n",
     "            print(f'No cbp record for {row[\"FIPS\"]}')\n",
@@ -486,12 +484,12 @@
     "        state = row.FIPS[:2]\n",
     "        county = row.FIPS[2:]\n",
     "        # row['Features'].extend(['Nonemployer Statistics', '# establishments','Revenue($1,000)'])\n",
-    "        row['DATA_COL'].extend(' ')\n",
+    "        row['DATA_COL'].extend(' ') # empty string to separate the heading: 'Nonemployer Statistics'\n",
     "\n",
     "        if year >= 2015:\n",
-    "            url = f'https://api.census.gov/data/{year}/nonemp?get=NAME,NESTAB,NRCPTOT&for=county:{county}&in=state:{state}&key=***REMOVED***'\n",
+    "            url = f'https://api.census.gov/data/{year}/nonemp?get=NAME,NESTAB,NRCPTOT&for=county:{county}&in=state:{state}&key={CENSUS_API_KEY}'\n",
     "        else:\n",
-    "            url = f'https://api.census.gov/data/{year}/nonemp?get=NESTAB,NRCPTOT&for=county:{county}&in=state:{state}&key=***REMOVED***'\n",
+    "            url = f'https://api.census.gov/data/{year}/nonemp?get=NESTAB,NRCPTOT&for=county:{county}&in=state:{state}&key={CENSUS_API_KEY}'\n",
     "        r = requests.get(url)\n",
     "        if len(r.content):\n",
     "            content = r.content\n",
@@ -531,7 +529,7 @@
    "source": [
     "def get_county_economy(df, year):\n",
     "    code_list = ''\n",
-    "    census_api_key = '&key=***REMOVED***'\n",
+    "    census_api_key = f'&key={CENSUS_API_KEY}'\n",
     "    if year >= 2017:\n",
     "        year = 2017\n",
     "        base_url = f'https://api.census.gov/data/2017/ecnbasic?get=NAICS2017,ESTAB,EMP,RCPTOT&for=county:'#{county_fips}&in=state:{state_fips}'\n",
@@ -561,7 +559,7 @@
     "        # row['Features'].extend(['Economic Data', 'Rank #1 Industry', 'Value of business($1000)', '# establishments', '# employees'])\n",
     "        # row['Features'].extend(['Rank #2 Industry', 'Value of business($1000)', '# establishments', '# employees'])\n",
     "        # row['Features'].extend(['Rank #3 Industry', 'Value of business($1000)', '# establishments', '# employees'])\n",
-    "        row['DATA_COL'].extend(' ')\n",
+    "        row['DATA_COL'].extend(' ') # Empty string to separate the heading: Economic Data\n",
     "            \n",
     "        url = base_url + f'{county}&in=state:{state}'\n",
     "        r = requests.get(url + code_list + census_api_key)\n",
@@ -652,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "c23267b1",
    "metadata": {},
    "outputs": [],
@@ -679,8 +677,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "d530cdea",
+   "execution_count": null,
+   "id": "556af6d1",
    "metadata": {},
    "outputs": [],
    "source": []
