--- a/notebooks/WildFireWeather.ipynb
+++ b/notebooks/WildFireWeather.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "1c12ea77",
    "metadata": {},
    "outputs": [],
@@ -61,8 +61,7 @@
     "\n",
     "from tqdm.auto import tqdm  # for notebooks\n",
     "from amazon_cred import ENDPOINT, PORT, USER, PASSWORD, DATABASE\n",
-    "\n",
-    "from data_constants import ZONE_COUNTY_CORR_URL"
+    "from cred import NCDC_TOKEN"
    ]
   },
   {
@@ -70,21 +69,23 @@
    "id": "a1d52831",
    "metadata": {},
    "source": [
-    "## Constant URLs, storm categories, and strings"
+    "## Constant URLs, strings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "3a3fdec9",
    "metadata": {},
    "outputs": [],
    "source": [
     "USDM_CSV_BASE_URL = 'https://droughtmonitor.unl.edu/DmData/GISData.aspx?mode=table&aoi=county&date='\n",
     "\n",
-    "NCDC_TOKEN = '***REMOVED***'\n",
     "NCDC_BASE_URL = 'www.ncdc.noaa.gov'\n",
-    "NCDC_WEATHER_STATIONS_LST_URL = '/cdo-web/api/v2/stations?locationid=FIPS:'"
+    "NCDC_WEATHER_STATIONS_LST_URL = '/cdo-web/api/v2/stations?locationid=FIPS:'\n",
+    "NCEI_BASE_URL = 'https://www.ncei.noaa.gov/access/services/data/v1.'\n",
+    "\n",
+    "WEATHER_COLS = ['DATE', 'PRCP', 'SNOW', 'SNWD', 'TMAX', 'TMIN']"
    ]
   },
   {
@@ -295,10 +296,7 @@
     }
    ],
    "source": [
-    "df_zone_county = pd.read_csv(ZONE_COUNTY_CORR_URL, sep='|', header=None,\n",
-    "                    names=['STATE', 'ZONE', 'CWA', 'NAME', 'STATE_ZONE',\n",
-    "                           'CZ_NAME', 'FIPS', 'TIME_ZONE', 'FE_AREA', 'LAT', 'LON'])\n",
-    "df_zone_county = df_zone_county[['FIPS', 'LAT', 'LON']]\n",
+    "df_zone_county = pd.read_csv('../data/zone_county_corr.csv')\n",
     "\n",
     "def haversine(lat1, lon1, lat2, lon2):\n",
     "    metric_constant = 3959\n",
@@ -319,7 +317,7 @@
     "    return df_stations.nsmallest(n, ['hav'])\n",
     "\n",
     "def donwload_climate_info(station_number, start_date, end_date):\n",
-    "    api =  f'https://www.ncei.noaa.gov/access/services/data/v1.?dataset=daily-summaries&stations={station_number}'\n",
+    "    api =  f'{NCEI_BASE_URL}?dataset=daily-summaries&stations={station_number}'\n",
     "    api += f'&startDate={start_date}&endDate={end_date}&units=metric'\n",
     "    while True:\n",
     "        try:\n",
@@ -328,7 +326,6 @@
     "        except ConnectionError:\n",
     "            print('Connection error')\n",
     "    return res.content\n",
-    "\n",
     "\n",
     "def getWildFireEvents(year):\n",
     "    wildfire = \"'Wildfire'\"    \n",
@@ -384,7 +381,7 @@
     "        result = conn_http.getresponse()\n",
     "        result = result.read()\n",
     "        # somehow curl does not allow me to redirect output.\n",
-    "        #!curl -H \"token:***REMOVED***\" \"https://www.ncdc.noaa.gov/cdo-web/api/v2/stations?locationid=FIPS:08049\"\n",
+    "        #!curl -H \"token:{NCDC_TOKEN}\" \"https://www.ncdc.noaa.gov/cdo-web/api/v2/stations?locationid=FIPS:08049\"\n",
     "\n",
     "        data = json.loads(result)\n",
     "        try:\n",
@@ -412,7 +409,7 @@
     "                # print(id_gnd[1])\n",
     "                response = donwload_climate_info(id_gnd[1], last_10_yr_date_str, last_tuesday_str)\n",
     "\n",
-    "                df_weather = pd.read_csv(StringIO(response.decode(\"UTF-8\")))[['DATE', 'PRCP', 'SNOW', 'SNWD', 'TMAX', 'TMIN']]\n",
+    "                df_weather = pd.read_csv(StringIO(response.decode(\"UTF-8\")))[WEATHER_COLS]\n",
     "                df_copy = df_weather.copy()\n",
     "                df_copy.dropna(subset=['TMIN','TMAX','PRCP'], inplace=True)\n",
     "                # print(df_weather.shape[0], last_10_yr_date_str, last_tuesday_str)\n",
@@ -438,15 +435,36 @@
     "    return\n",
     "\n",
     "start_year = 2000\n",
-    "end_year = 2011\n",
+    "end_year = 2021\n",
     "for i in tqdm(range(start_year, end_year)):\n",
     "    getWildFireEvents(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "01b2d86f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wildfire = \"'Wildfire'\" \n",
+    "conn = psycopg2.connect(\n",
+    "    host=ENDPOINT,\n",
+    "    port=PORT,\n",
+    "    user=USER,\n",
+    "    password=PASSWORD,\n",
+    "    database = DATABASE\n",
+    ")\n",
+    "with conn:\n",
+    "    select = f'SELECT * from counties WHERE \"EVENT_TYPE\" = {wildfire}'\n",
+    "    df_counties = pd.read_sql(select, con=conn)\n",
+    "conn.close()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -460,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
