add duration and tornado_strength

--- a/notebooks/Storm_Database.ipynb
+++ b/notebooks/Storm_Database.ipynb
@@ -255,6 +255,11 @@
     "    # 7. calculate the total damage in each county and build event list\n",
     "    county_dict = {} # key is FIPS, value is a list [name, dict {EVENT_TYPE: BEGIN_YEARMONTH%100/BEGIN_DAY}, total damage]\n",
     "    df_counties['TOTAL_DAMAGE'] = 0\n",
+    "    \n",
+    "    df_counties['BEGIN_TIME'] = df_counties['BEGIN_TIME'].astype(str)\n",
+    "    df_counties['BEGIN_TIME'] = df_counties['BEGIN_TIME'].str.zfill(4)\n",
+    "    df_counties['END_TIME'] = df_counties['END_TIME'].astype(str)\n",
+    "    df_counties['END_TIME'] = df_counties['END_TIME'].str.zfill(4)\n",
     "\n",
     "    def calculate_total_damage(row):\n",
     "        categories = STORM_CATEGORIES.keys()\n",
@@ -288,6 +293,20 @@
     "        row['EVENT_DATE'] = pd.to_datetime(str(row['BEGIN_YEARMONTH']) + str(row['BEGIN_DAY']), format='%Y%m%d')\n",
     "        row['NAME'] = row['CZ_NAME'] + ', ' + row['STATE']\n",
     "        row['TOTAL_DAMAGE'] = row['DAMAGE_PROPERTY'] + row['DAMAGE_CROPS']\n",
+    "        \n",
+    "        begin_ts = pd.to_datetime(str(row['BEGIN_YEARMONTH'])[:4] + '-' + \\\n",
+    "                                  str(row['BEGIN_YEARMONTH'])[4:] + '-' + \\\n",
+    "                                  str(row['BEGIN_DAY']) + ':' + row['BEGIN_TIME'][:2] + ':' + row['BEGIN_TIME'][2:],\n",
+    "                                  format = '%Y-%m-%d:%H:%M')\n",
+    "        end_ts = pd.to_datetime(str(row['END_YEARMONTH'])[:4] + '-' + \\\n",
+    "                                str(row['END_YEARMONTH'])[4:] + '-' + \\\n",
+    "                                str(row['END_DAY']) + ':' + row['END_TIME'][:2] + ':' + row['END_TIME'][2:],\n",
+    "                                format = '%Y-%m-%d:%H:%M')\n",
+    "        row['DURATION'] = end_ts - begin_ts\n",
+    "        row['TORNADO_STRENGTH'] = ''\n",
+    "        if row['EVENT_TYPE'] == 'Tornado':\n",
+    "            row['TORNADO_STRENGTH'] = row['TOR_F_SCALE'] + ',' + \\\n",
+    "                                      str(row['TOR_LENGTH']) + ',' + str(row['TOR_WIDTH'])\n",
     "        \n",
     "        return row\n",
     "\n",
@@ -649,6 +668,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "650411ff",
+   "metadata": {},
+   "source": [
+    "## Save the database into a backup csv file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c23267b1",
@@ -686,7 +713,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -700,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
