--- a/notebooks/WildFireWeather.ipynb
+++ b/notebooks/WildFireWeather.ipynb
@@ -23,10 +23,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install pandas==1.3.2\n",
-    "pip install tqdm==4.62.2\n",
-    "pip install psycopg2-binary==2.9.1\n",
-    "pip install sqlalchemy==1.4.23"
+    "!pip install pandas==1.3.2\n",
+    "!pip install tqdm==4.62.2\n",
+    "!pip install psycopg2-binary==2.9.1\n",
+    "!pip install sqlalchemy==1.4.23"
    ]
   },
   {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "1c12ea77",
    "metadata": {},
    "outputs": [],
@@ -299,7 +299,7 @@
     "df_zone_county = pd.read_csv('../data/zone_county_corr.csv')\n",
     "\n",
     "def haversine(lat1, lon1, lat2, lon2):\n",
-    "    metric_constant = 3959\n",
+    "    metric_constant = 3959  # radius of Earth in miles\n",
     "    \n",
     "    lat1, lon1, lat2, lon2 = map(np.deg2rad, [lat1,lon1, lat2, lon2])\n",
     "    dlat = lat2 - lat1\n",
@@ -336,22 +336,23 @@
     "        password=PASSWORD,\n",
     "        database = DATABASE\n",
     "    )\n",
+    "    # get all records of wildfires for a given year\n",
     "    with conn:\n",
     "        select = f'SELECT * from counties WHERE \"Year\" = {year} AND \"EVENT_TYPE\" = {wildfire}'\n",
     "        df_counties = pd.read_sql(select, con=conn)\n",
     "    conn.close()\n",
     "    \n",
-    "    os.mkdir(str(year))\n",
+    "    os.mkdir('../data/wildfires/'+str(year))\n",
     "    # print(\"Processing : \", df_counties.shape[0], \" for \", str(year))\n",
     "    for r, row in tqdm(df_counties.iterrows()):\n",
     "        today = row['EVENT_DATE']\n",
-    "        dirname = str(year) + '/' + today.strftime('%m_%d') + '_' + row['FIPS']\n",
+    "        dirname = '../data/wildfires/' + str(year) + '/' + today.strftime('%m_%d') + '_' + row['FIPS']\n",
     "        if os.path.exists(dirname):\n",
-    "            continue # we already have the county weather\n",
+    "            continue # we already have the county weather; multiple records for the same weather event!\n",
     "    \n",
     "        os.mkdir(dirname)\n",
     "\n",
-    "        offset = (today.weekday() - 1)%7\n",
+    "        offset = (today.weekday() - 1)%7 # USDM drought montior report has the date of the previous TuesdayJSON\n",
     "        last_tuesday = today - timedelta(days=offset)\n",
     "        twelve_years_past = last_tuesday - timedelta(days=12*365.25) # request for additional data\n",
     "        twelve_years_str = twelve_years_past.strftime('%Y-%m-%d')\n",
@@ -371,6 +372,9 @@
     "\n",
     "        # Precipitation data\n",
     "        # list of weather stations using NCDC api: https://www.ncdc.noaa.gov/cdo-web/webservices/v2#gettingStarted\n",
+    "        # we request for the weather stations that cover the last 12 years and provide daily summary of \n",
+    "        # temperature and precipitation.\n",
+    "        # Note: even then the API can return weather stations that do not adhere to our requirements!\n",
     "        headers = {'token': NCDC_TOKEN}\n",
     "        conn_http = http.client.HTTPSConnection(NCDC_BASE_URL)\n",
     "        conn_http.request('GET', NCDC_WEATHER_STATIONS_LST_URL + row['FIPS'] + \n",
@@ -391,18 +395,19 @@
     "            continue\n",
     "        \n",
     "        # print(df_stations.shape[0], \" df_stations found\")\n",
-    "\n",
+    "        # additional checks to ensure that we have the weather stations that have the data\n",
     "        df_stations['mindate'] = pd.to_datetime(df_stations['mindate'])\n",
     "        df_stations['maxdate'] = pd.to_datetime(df_stations['maxdate'])\n",
     "        df_stations = df_stations[(df_stations['mindate'] <= twelve_years_past) &\n",
     "                                  (df_stations['maxdate'] >= last_tuesday)]\n",
+    "        \n",
     "        # print(\"df_stations: \", df_stations.shape[0])\n",
     "        if df_stations.shape[0]:\n",
     "            last_10_yr_date = last_tuesday - timedelta(days=10*365.25)\n",
     "            last_10_yr_date = pd.to_datetime(str(last_10_yr_date.year) + '-01-01')\n",
     "            last_10_yr_date_str = last_10_yr_date.strftime('%Y-%m-%d')\n",
     "\n",
-    "            df_closestn = closestn(df_stations, wildfire_county_df.iloc[0])\n",
+    "            df_closestn = closestn(df_stations, wildfire_county_df.iloc[0]) # get 3 nearest weather stations\n",
     "            foundRec = False\n",
     "            for _, row_c in df_closestn.iterrows():\n",
     "                id_gnd = row_c['id'].split(':')\n",
@@ -411,10 +416,12 @@
     "\n",
     "                df_weather = pd.read_csv(StringIO(response.decode(\"UTF-8\")))[WEATHER_COLS]\n",
     "                df_copy = df_weather.copy()\n",
+    "                \n",
+    "                # data cleanup: drop all NaN rows\n",
     "                df_copy.dropna(subset=['TMIN','TMAX','PRCP'], inplace=True)\n",
     "                # print(df_weather.shape[0], last_10_yr_date_str, last_tuesday_str)\n",
     "                if df_copy.shape[0] <= (0.5*df_weather.shape[0]): # 50 % of the records missing!\n",
-    "                    continue\n",
+    "                    continue # look for a different weather station\n",
     "                else:\n",
     "                    df_weather['DATE'] = pd.to_datetime(df_weather['DATE'])\n",
     "                    foundRec = True\n",
@@ -422,7 +429,7 @@
     "            if not foundRec:\n",
     "                print(\"No weather record found for \", row['NAME'], \" out of \", df_closestn.shape[0])\n",
     "            \n",
-    "            # Fill in the missing dates with np.NaN\n",
+    "            # Fill in the missing dates with np.NaN so that all weather records have similar lengths\n",
     "            df_weather.set_index('DATE', inplace=True)\n",
     "            idx = pd.date_range(last_10_yr_date_str, today.strftime('%Y-%m-%d'))\n",
     "            df_weather = df_weather.reindex(idx, fill_value = np.NaN)\n",
@@ -439,32 +446,11 @@
     "for i in tqdm(range(start_year, end_year)):\n",
     "    getWildFireEvents(i)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "01b2d86f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wildfire = \"'Wildfire'\" \n",
-    "conn = psycopg2.connect(\n",
-    "    host=ENDPOINT,\n",
-    "    port=PORT,\n",
-    "    user=USER,\n",
-    "    password=PASSWORD,\n",
-    "    database = DATABASE\n",
-    ")\n",
-    "with conn:\n",
-    "    select = f'SELECT * from counties WHERE \"EVENT_TYPE\" = {wildfire}'\n",
-    "    df_counties = pd.read_sql(select, con=conn)\n",
-    "conn.close()"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -478,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
