Add a second dashboard for wildfires

--- a/siads_591_report.ipynb
+++ b/siads_591_report.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fb0c3acd",
    "metadata": {
     "scrolled": false
@@ -93,12 +93,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1203d2f7",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fd9ba1baef894becb50a3c0db1f73bcc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Accordion(children=(HBox(children=(Dropdown(description='Select year', options=('', '2000', '2001', '2002', '2…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "08605944cc0340e18f373681ae4ecdad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Output(layout=Layout(border='2px solid black', display='flex', flex_flow='row', height='500px',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Uncomment this line if you are viewing using Google colab\n",
     "# display(Javascript('''google.colab.output.setIframeHeight(0, true, {maxHeight: 5000})'''))\n",
@@ -274,12 +303,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "55dda9cd",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6ebf07746163498b8e8d5a6d2ea849b7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Accordion(children=(VBox(children=(HBox(children=(Dropdown(description='Select year', options=('2000', '2001',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "96bbb42979f64b0b8741af79bdfb8979",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Output(layout=Layout(border='2px solid black', display='flex', height='600px', overflow='scroll…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Uncomment this line if you are viewing using Google colab\n",
     "# display(Javascript('''google.colab.output.setIframeHeight(0, true, {maxHeight: 5000})'''))\n",
@@ -336,7 +394,7 @@
     "        dirname = WILDFIRE_DATA_URL + str(year) + '/'\n",
     "        \n",
     "        output_map.clear_output()\n",
-    "        if b['owner'].description != 'Category':\n",
+    "        if b['owner'].description != 'Severity':\n",
     "            output_charts.clear_output()\n",
     "        \n",
     "        # Get USDM csv file based on the EVENT_DATE\n",
@@ -358,8 +416,8 @@
     "        county_idx = wildfire_county_df.iloc[0].name\n",
     "\n",
     "        #data = df_usdm_merged[['LAT', 'LON']].values.tolist()\n",
-    "        county_lat = df_usdm_merged.iloc[county_idx]['LAT']\n",
-    "        county_lon = df_usdm_merged.iloc[county_idx]['LON']\n",
+    "        #county_lat = df_usdm_merged.iloc[county_idx]['LAT']\n",
+    "        #county_lon = df_usdm_merged.iloc[county_idx]['LON']\n",
     "\n",
     "        counties = get_counties_json()\n",
     "        \n",
@@ -377,20 +435,20 @@
     "                        hover_name = 'NAME',   # this has both the county and state name\n",
     "                        hover_data = {'FIPS': False},\n",
     "                        # center={'lat': county_lat, 'lon': county_lon},\n",
-    "                        color = categoryRadio.value,          # Drought level\n",
+    "                        color = severityRadio.value,          # Drought level\n",
     "                        color_continuous_scale='ylorrd',\n",
     "                        scope = 'usa') # set the scope to usa to automatically configure the \n",
     "                                       # map to display USA-centric data in an appropriate projection.\n",
     "        fig_drought.add_trace(fig.data[0])\n",
-    "        titleStr = f'Map of {categoryRadio.value} drought conditions<br>'\n",
+    "        titleStr = f'Map of {severityRadio.value} drought conditions<br>'\n",
     "        titleStr += f\"near {df_counties.iloc[wildfiresDrop.index]['NAME']}<br>\"\n",
     "        titleStr += f\"on {df_counties.iloc[wildfiresDrop.index]['EVENT_DATE'].strftime('%m-%d')}\"\n",
     "        fig_drought.update_layout(title_text = titleStr)\n",
     "        fig_drought.show()\n",
     "\n",
     "\n",
-    "    if b['owner'].description == 'Category':\n",
-    "        return # just changed the drought category, no need to update the precipitation data\n",
+    "    if b['owner'].description == 'Severity':\n",
+    "        return # just changed the drought severity, no need to update the precipitation data\n",
     "\n",
     "    with output_charts:\n",
     "        # Precipitation data\n",
@@ -471,7 +529,7 @@
     "    value=None\n",
     ")\n",
     "\n",
-    "categoryRadio = widgets.RadioButtons(description=\"Category\",\n",
+    "severityRadio = widgets.RadioButtons(description=\"Severity\",\n",
     "                                     options=['D0', 'D1', 'D2', 'D3', 'D4'],\n",
     "                                     value='D0')\n",
     "\n",
@@ -483,10 +541,10 @@
     "wildfireVBox = widgets.VBox([widgets.Label(value='Select county (sorted by damage in $):'), wildfiresDrop])\n",
     "\n",
     "selYearDrop.observe(clicked, names=['value']) # filter only once, specify value in observe\n",
-    "categoryRadio.observe(selEvent, names=['value'])\n",
+    "severityRadio.observe(selEvent, names=['value'])\n",
     "wildfiresDrop.observe(selEvent, names=['value'])\n",
     "\n",
-    "list_widgets = [widgets.VBox([widgets.HBox([selYearDrop, categoryRadio]), wildfireVBox])]\n",
+    "list_widgets = [widgets.VBox([widgets.HBox([selYearDrop, severityRadio]), wildfireVBox])]\n",
     "accordion = widgets.Accordion(children=list_widgets)\n",
     "accordion.set_title(0,\"Explore WildFire Drought and Weather Data\")\n",
     "display(accordion,res_output)"
